--- a/src/components/TextInput/TextInput.css
+++ b/src/components/TextInput/TextInput.css
@@ -3,11 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-weight: 300;
+    font-weight: 400;
     color: white;
 }
 
 html {
+    max-width: 100vh;
+    max-height: 100vh;
     background: radial-gradient(rgb(255, 230, 4), 1px, rgb(245, 173, 17));
     background-attachment: fixed;
     background-size: cover;
@@ -17,7 +19,7 @@ html {
 
 h1 {
     margin-top: 150px;
-    margin-bottom: 30px;
+    margin-bottom: 100px;
     font-size: 50px;
     font-weight: 600;
 }
@@ -29,9 +31,12 @@ input {
 }
 
 input {
+    width: 50%;
     margin: 0 auto;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-bottom: 10px;
     font-size: 20px;
     border: 1px solid #ccc;
+    color: black;
 }
+
