--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-weight: 200;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',sans-serif;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
 body {
@@ -13,13 +19,4 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-
-}
-
-h1 {
-  margin-top: 150px;
-  margin-bottom: 50px;
-  font-size: 3.4rem;
-  font-weight:900;
-  color: white;
 }
