--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -4,7 +4,7 @@ button {
   padding: 5px 20px;
   margin-top: 35px;
   margin-bottom: 10px;
-  background: transparent;
+  background: rgb(0, 119, 255);
   font-size: 15px;
   border: 1px solid white;
   border-radius: 10px;
